assets/css/index_styles.css
/* TODO */

body {
	background-color: #d1d6cf;
	margin-top: 0;
	font-family: 'Mountains of Christmas', cursive;
}

.container,
.end_container {
	background: #f8dccd;
	height: 82vh;
	width: 68vw;
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
	background-image: url(../../images/gamebg.jpg);
	/* background-size:100% auto;
	background-repeat: no-repeat; */
}

.shop {
	background-color: #d1d6cf;
	margin-top: 0;
	font-family: 'Mountains of Christmas', cursive;
}

.errorPurchase {
	font-weight: bold;
	color: red;
	font-size: larger;
	margin-top: 5%;
	display: none;
}

.shopWindow {
	/* background-color: #d1d6cf; */
	margin-top: 0;
	font-family: 'Mountains of Christmas', cursive;
	background-image: url(../../images/shopbg.png);
	background-size: 100% auto;
	background-repeat: no-repeat;
	/* background: #f8dccd; */
	height: 82vh;
	width: 67vw;
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
}

.invWindow {
	/* background-color: #d1d6cf; */
	margin-top: 0;
	font-family: 'Mountains of Christmas', cursive;
	background-image: url(../../images/inventory.png);
	background-size: 100% auto;
	background-repeat: no-repeat;

	/* background: #f8dccd; */
	height: 82vh;
	width: 67vw;
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
}

.header {
	text-align: center;
	padding-top: 10%;
	font-size: 80px;
	margin-top: 0;
}

a {
	text-decoration: none;
	color: white;
}

.button {
	display: inline-block;
	background-color: #f29b67;
	text-align: center;
	padding: 5px;
	font-size: 20px;
	border: white solid 5px;
	border-radius: 10%;
}

/* move slightly up on hover */
.button:hover {
	-webkit-transform: translateY(-3px);
	transform: translateY(-3px);
}

/* TODO */

.back {
	height: 70px;
	float: left;
	padding-left: 15px;
	margin-top: 10px;
}

.back:hover {
	opacity: 80%;
}

.backpack {
	height: 80px;
	float: right;
	padding-left: 15px;
	margin-top: 10px;
}

.backpack:hover {
	opacity: 80%;
}

.character {
	width: 38%;
	float: left;
	height: 100%;
	border-right: black 1px solid;
}

.currChar {
	margin-left: 10%;
	margin-top: 20%;
	height: 50%;
	width: 60%;
	display: inline-block;
}

.market {
	width: 61%;
	float: right;
	height: 100%;
	padding-top: 20px;
}

.currCoins {
	/* display: block; */
	text-align: left;
	font-size: 30px;
	margin-top: 10px;
}

.market p {
	font-size: 3rem;
}

.items {
	margin-top: 100px;
}

.item {
	height: 5rem;
}

.h {
	margin-bottom: 0.5rem;
}

#itemName {
	font-size: 1rem;
	margin-bottom: 0.25rem;
}

.cost {
	vertical-align: middle;
	height: 30px;
	/* margin-top: 20px; */
}

.purchaseButton {
	/* padding-top: 40px; */
	margin-top: 20px;
	height: 40px;
	width: 20%;
	display: none;
}

.purchaseButton:hover {
	opacity: 70%;
}
.purchaseConfirmBox {
	background-color: white;
	padding: 15px;
	width: 80%;
	text-align: center;
	margin-top: 20px;
	border: black 1px solid;
	display: none;
	/* display: inline-block; */
}

.purchaseOption {
	margin-left: 20px;
	margin-right: 20px;
}

.col-sm:hover {
	cursor: pointer;
}

.close {
	/* display: none; */
	margin-right: 1%;
}

.close p {
	font-size: 50px;
}

.rules {
	height: 200px;
	float: right;
	margin-top: 0px;
	display: block;
	position: absolute;
	bottom: 0px;
	right: 0px;
}

.rules:hover {
	opacity: 80%;
}

#rules {
	width: 70%;
	margin: auto;
	font-size: 150%;
}

#rules li {
	word-spacing: 0.2rem;
}

